<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".MainScreen">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="#fafafa"
                android:contentDescription="@string/CurrentNamazTime"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:fontFamily="@font/poppinsb"
                android:padding="5dp"
                android:text="@string/CurrentNamazTime"
                android:textColor="@color/black" />
        </FrameLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/shapes"
            android:columnCount="3"
            android:elevation="10dp"
            android:orientation="horizontal"
            android:padding="15dp">

            <LinearLayout
                android:id="@+id/btnQuran"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:onClick="gotoQuran"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@string/quran"
                    android:src="@drawable/ic_quran" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppinsb"
                    android:text="@string/quran"
                    android:textColor="@color/Gold"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_columnWeight="1"
                android:id="@+id/dua"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@string/dua"
                    android:src="@drawable/ic_dua" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppinsb"
                    android:text="@string/dua"
                    android:textColor="@color/Gold"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:id="@+id/qiblaDirection"
                android:layout_height="match_parent"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@string/q_Direction"
                    android:src="@drawable/ic_qibla_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsb"
                    android:gravity="center"
                    android:text="@string/q_Direction"
                    android:textColor="@color/Gold"
                    android:textSize="19sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/gotoMapLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@string/NearMosque"
                    android:src="@drawable/ic_mosque" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsb"
                    android:gravity="center"
                    android:text="@string/NearMosque"
                    android:textColor="@color/Gold"
                    android:textSize="19sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_columnWeight="1"
                android:layout_margin="5dp"
                android:gravity="center"
                android:id="@+id/salahTracker"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@string/SalahTracker"
                    android:src="@drawable/ic_salah_tracker" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsb"
                    android:gravity="center"
                    android:text="@string/SalahTracker"
                    android:textColor="@color/Gold"
                    android:textSize="20sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_columnWeight="1"
                android:id="@+id/tasbeeh"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@string/tashbeeh"
                    android:src="@drawable/ic_tasbeeh" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsb"
                    android:gravity="center"
                    android:text="@string/tashbeeh"
                    android:textColor="@color/Gold"
                    android:textSize="20sp" />
            </LinearLayout>

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:background="@drawable/q">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppinsb"
                android:gravity="center"
                android:text="@string/VerseOfDay"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:background="@drawable/hadith">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppinsb"
                android:gravity="center"
                android:text="@string/HadithOfDay"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:background="@drawable/duaa">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppinsb"
                android:gravity="center"
                android:text="@string/DuaOfDay"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>

</FrameLayout>





