<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:background="#fafafa"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:padding="5dp"
                    android:fontFamily="@font/poppinsb"
                    android:textColor="@color/black"
                    android:text="@string/CurrentNamazTime"
                    />
            </FrameLayout>


            <GridLayout
                android:elevation="10dp"
                android:id="@+id/GridLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:background="@drawable/shapes"
                android:columnCount="3"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:contentDescription="@string/quran"
                        android:src="@drawable/ic_quran" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppinsb"
                        android:text="@string/quran"
                        android:textColor="@color/Gold"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:contentDescription="@string/dua"
                        android:src="@drawable/ic_dua" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppinsb"
                        android:text="@string/dua"
                        android:textColor="@color/Gold"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:contentDescription="@string/q_Direction"
                        android:src="@drawable/ic_qibla_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppinsb"
                        android:text="@string/q_Direction"
                        android:textColor="@color/Gold"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:contentDescription="@string/NearMosque"
                        android:src="@drawable/ic_mosque" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppinsb"
                        android:text="@string/NearMosque"
                        android:textColor="@color/Gold"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:contentDescription="@string/SalahTracker"
                        android:src="@drawable/ic_salah_tracker" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppinsb"
                        android:text="@string/SalahTracker"
                        android:textColor="@color/Gold"
                        android:textSize="17sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:contentDescription="@string/tashbeeh"
                        android:src="@drawable/ic_tasbeeh" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppinsb"
                        android:text="@string/tashbeeh"
                        android:textColor="@color/Gold"
                        android:textSize="18sp" />
                </LinearLayout>

            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:background="@color/black">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppinsb"
                    android:gravity="center"
                    android:text="@string/VerseOfDay"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:background="@color/black">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppinsb"
                    android:gravity="center"
                    android:text="@string/HadithOfDay"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:background="@color/black">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppinsb"
                    android:gravity="center"
                    android:text="@string/DuaOfDay"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
